<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="unit" translatable="false">C</string>
    <string name="weather">cloudy</string>
    <string name="city">-----</string>
    <string name="temperature" translatable="false">--</string>
    <string name="app_name">Weather</string>
    <string name="delete_city_from_list">delete city from list</string>
    <string name="add">Add</string>
    <string name="enter_city_to_add">Enter city to add</string>
    <string name="pressure">pressure</string>
    <string name="show">Show</string>
    <string name="wind">wind</string>
    <string name="pressure_value" translatable="false">---</string>
    <string name="pressure_unit">hPa</string>
    <string name="wind_value" translatable="false">-</string>
    <string name="miles_hour">m/h</string>
    <string name="meter_sec">m/s</string>
    <string name="celsius" translatable="false">C</string>
    <string name="settings">Settings</string>
    <string name="degree" translatable="false">°</string>
    <string name="date" translatable="false">-- ---</string>
    <string name="err_city_is_in_list">City is already added</string>
    <string name="err_city_not_found">City not found</string>
    <string name="err_enter_city">Enter city</string>
    <string name="theme">Dark theme</string>
    <string name="msg_settings_saved">Settings saved</string>
    <string name="imperial_units">Imperial units</string>
    <string name="press_again_to_exit">Press once again to exit!</string>
    <string name="changeCity">Change city</string>
    <string name="nav_header_desc">Navigation</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About app</string>
    <string name="communicate">Communicate</string>
    <string name="coming_soon">Coming soon</string>
    <string name="quote">Good weather is enough for happiness, and in bad weather you can, for example, bake an Apple pie. And no additional meaning is required. Like childhood.</string>
    <string name="author">© Max Fry</string>
    <string name="umbrella">Umbrella</string>
    <string name="home">Home</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="send">Send</string>
    <string name="err_write_feedback">Write some feedback, please.</string>
    <string name="feedback_sent">Your feedback was sent successfully.</string>
    <string name="sensor_temperature">sensor temperature</string>
    <string name="sensor_humidity">sensor humidity</string>
    <string name="sensor">sensor</string>
    <string name="humidity_value" translatable="false">--</string>
    <string name="sensor_humidity_value" translatable="false">--</string>
    <string name="humidity">humidity</string>
    <string name="percent" translatable="false">%</string>
    <!--icons-->
    <string name="icon_temperature" translatable="false">&#xf055;</string>
    <string name="icon_pressure" translatable="false">&#xf079;</string>
    <string name="icon_wind" translatable="false">&#xf050;</string>
    <string name="icon_humidity" translatable="false">&#xf07a;</string>
    <!--weather icons-->
    <string name="weather_icon_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_icon_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_icon_drizzle" translatable="false">&#xf01c;</string>
    <string name="weather_icon_rain" translatable="false">&#xf019;</string>
    <string name="weather_icon_snow" translatable="false">&#xf01b;</string>
    <string name="weather_icon_clouds" translatable="false">&#xf013;</string>
    <string name="weather_icon_mist" translatable="false">&#xf014;</string>
</resources>