<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/monday"
        android:textSize="@dimen/weather_details_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temperature_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="@dimen/weather_details_text_size" />

            <TextView
                android:id="@+id/degree"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/degree"
                android:textSize="@dimen/weather_details_text_size" />

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/celsius"
                android:textSize="@dimen/weather_details_text_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>