<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/city"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        tools:text="Moscow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weather_icon"
            style="@style/LargeFontIcon"
            android:visibility="gone"
            tools:text="@string/weather_icon_rain" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/weather_icon_fresco"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temperature_value"
                style="@style/MainWeather"
                tools:text="17" />

            <TextView
                android:id="@+id/unit"
                style="@style/MainWeather"
                tools:text="°C" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/city_weather"
            style="@style/WeatherDetails"
            tools:text="shower rain" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center|center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SmallFontIcon"
                android:text="@string/icon_pressure" />

            <TextView
                android:id="@+id/pressure_value"
                style="@style/WeatherDetails"
                tools:text="1000" />

            <TextView
                style="@style/WeatherDetails"
                android:text="@string/pressure_unit"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/SmallFontIcon"
                android:text="@string/icon_wind" />

            <TextView
                android:id="@+id/wind_value"
                style="@style/WeatherDetails"
                tools:text="3" />

            <TextView
                android:id="@+id/wind_unit"
                style="@style/WeatherDetails"
                android:layout_marginStart="4dp"
                tools:text="m/s" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/SmallFontIcon"
                android:text="@string/icon_humidity" />

            <TextView
                android:id="@+id/humidity_value"
                style="@style/WeatherDetails"
                tools:text="95" />

            <TextView
                style="@style/WeatherDetails"
                android:text="@string/percent" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>